header and background align finally fuckin fixed

--- a/css/styles.css
+++ b/css/styles.css
@@ -43,12 +43,12 @@ html, body {
 	height: 100%;
 	min-height: 600px;
 	max-height: 900px;
-	background: url(../img/bgRailsColor.png);
+	background: url(../img/bgRailsColor.png) no-repeat center left fixed;
 	background-size: cover;
 }
 
 .topBar {
-	background: url(../img/bgRailsColorSky10.png);
+	background: url(../img/bgRailsColorSky10.png) no-repeat center left fixed;
 	background-size: cover;
 	height:125px;
 	position: fixed;
